# s3-benchmark

./: .gitignore  README.md  pyproject.toml
src/s3_benchmark/: __init__.py  cli.py  constants.py  download.py  main.py  parsing.py  structs.py  upload.py  utils.py
